# ai-auction-room

./: .env.example  .gitignore  README.md  pyproject.toml
ai-transcripts/: ai-usage-summary.md
backend/: config.py  database.py  main.py  models.py  ws_manager.py
backend/routers/: auth.py  rooms.py
backend/services/: auction.py  auctioneer.py  council.py  registry.py  shill.py
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: AuctioneerTicker.jsx  BidFeed.jsx  BidPanel.jsx  CouncilValuation.jsx  ItemDisplay.jsx  ParticipantsList.jsx  Timer.jsx
frontend/src/hooks/: useAuction.js  useAuth.js
frontend/src/lib/: socket.js  supabase.js
frontend/src/pages/: AuctionRoom.jsx  Dashboard.jsx  Login.jsx  Results.jsx
supabase/: schema.sql
