[project]
name = "ai-auction-room-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "supabase>=2.4.0",
    "groq>=0.9.0",
    "pyjwt>=2.8.0",
    "pydantic-settings>=2.2.0",
    "python-multipart>=0.0.9",
    "cryptography>=42.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
